# code-diagram-generator

./: .env.example  .gitignore  LICENSE  README.md  custom_report.txt  digram_types.json  docker-compose.yml  pyproject.toml
code_diagram_generator/: main.py
fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
fastapi/app/: config.py  diagram_config.json  diagram_types.json  exceptions.py  llm_handler.py  main.py  models.py
fastapi/app/components/: enhanced_conversation_buffer.py
fastapi/app/config/: diagram_config.json  llm_config.json
fastapi/app/config/examples/flowchart/mmd/: data_flow_diagram_000.mmd
fastapi/app/config/templates/: generate_diagram_instructions_08112023.txt
fastapi/app/routes/: diagram.py  diagram_generation_routes.py  diagram_routes.py  directory_analysis_routes.py  folder_report.py  folder_tools.py  llm_routes.py  mermaid.py  mermaid_routes.py
fastapi/app/services/: anthropic_connector.py  diagram_function_defs.py  diagram_service.py  directory_analysis_service.py  folder_report_service.py  folder_tools_service.py  llm_service.py  mermaid_function_defs.py  mermaid_generator.py  mermaid_service.py  openai_connector.py
fastapi/app/templates/: generate_diagram_instructions_08112023.txt  syntax_help.txt
fastapi/app/templates/examples/: explemplars.md
fastapi/app/utils/: llm_utils.py  log_utils.py  markdown_json_parser.py  mermaid_parser.py  mermaid_utils.py
fastapi/tests/utils/: test_markdown_json_parser.py
nextjs/: .dockerignore  .prettierignore  Dockerfile  package.json  pnpm-lock.yaml  styles.css  tailwind.config.js
nextjs/pages/: index.jsx
nextjs/src/app/: DiagramForm.tsx  digram_types.json  layout.tsx  page.module.css  page.tsx
nextjs/src/components/: CancelButton.tsx  CheckboxGroup.tsx  CodeComponent.tsx  DesignDirectives.tsx  DiagramConfiguration.tsx  DiagramForm.tsx  DownwardArrow.tsx  Error.tsx  FormContent.tsx  GenericButton.tsx  Loading.tsx  MermaidDiagram.tsx  MermaidTest.tsx  RadioButtonGroup.tsx  SVGRenderer.tsx  SelectField.tsx  SelectorWithRadioOptions.tsx  SourceFolderAndOptions.tsx  SourceFolderField.tsx  SourceFolderSection.tsx  SubmitButton.tsx  TextArea.tsx  TextInput.tsx  Toast.tsx  TokenCounter.tsx  VendorConfig.tsx  VendorModelSelector.tsx  index.ts
nextjs/src/config/: formDefaults.ts
nextjs/src/hooks/: useDesignDirectives.ts  useDiagramInstructions.ts  useGitIgnore.ts  useLocalStorage.ts
nextjs/src/lib/: categoryColor.ts  diagramFormHandlers.ts  fetcher.ts  getSvgDimensions.ts  setFieldValues.ts
nextjs/src/templates/: generate_diagram_instructions_08112023.txt
nextjs/src/types/: DiagramForm.types.ts  types.ts
node-express/: Dockerfile  package.json  server.js
