[tool.poetry]
name = "code-diagram-generator"
version = "0.1.0"
description = "Generate code diagrams using LLMs."
authors = ["Sean Dearnaley <SeanDearnaley@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
folder-tree-generator = "^0.1.13"
python-code-outline = "^0.1.7"
fastapi = "^0.101.0"
requests = "^2.31.0"
uvicorn = "^0.23.2"
tiktoken = "^0.4.0"
openai = "^0.27.8"
pyrate-limiter = "^2.10.0"
anthropic = "^0.3.9"
openai-functools = "^1.0.97"
rich = "^13.5.2"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
mypy = "^1.4.1"
pytest = "^7.4.0"
ruff = "^0.0.280"
black = "^23.7.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
types-requests = "^2.31.0.1"
pylist = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
files = "app"